# lingua

./: CMakeLists.txt  LICENSE  README.md  poc.cpp  vcpkg.json
.devcontainer/linux/: Dockerfile  devcontainer.json
.github/workflows/: linux.yml
src/: CMakeLists.txt
tests/: CMakeLists.txt
